fixed z-index issue

--- a/imports/ui/stylingsheets/editor.less
+++ b/imports/ui/stylingsheets/editor.less
@@ -451,8 +451,8 @@ i.material-icons:hover {
 .label-info{
   background: @primary;
 }
-.select2-container{
-  z-index: 6;
+.select2-container {
+  z-index: 7;
 }
 .select2-container--default .select2-selection--multiple{
   border: 2px solid #999;
